--- a/client_astro/src/styles/global.css
+++ b/client_astro/src/styles/global.css
@@ -45,3 +45,9 @@ a {
 }
 
 /* dont forget clamping and img responsive */
+
+.sticker_grid{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+}
