--- a/client_astro/src/layouts/BaseLayout.astro
+++ b/client_astro/src/layouts/BaseLayout.astro
@@ -4,6 +4,7 @@ import { Image, Picture } from "astro:assets";
 import "../styles/reset.css";
 import "../styles/global.css";
 import fetchApi from "../lib/strapi.js";
+import StickerList from "../components/StickerList.astro";
 
 const { pageTitle } = Astro.props;
 
@@ -36,36 +37,7 @@ const stickers = await fetchApi({
 	<body>
 		<Header />
 		<main>
-			<ul class="sticker_grid">
-				{
-					stickers.map((sticker) => {
-						// Get the first sentence of the description
-						const firstPhrase =
-							sticker.description[0]?.children[0]?.text.split(
-								".",
-							)[0] + ".";
-
-						// Get the categories of the sticker
-						const categories = sticker.categories
-							?.map((category) => category.name)
-							.join(", ");
-
-						return (
-							<li>
-								<a href={`/stickers/${sticker.slug}`}>
-									<strong>{sticker.name}</strong>
-									<br />
-									{firstPhrase}
-									<br />
-									<span class="categories">
-										Categories: {categories || "None"}
-									</span>
-								</a>
-							</li>
-						);
-					})
-				}
-			</ul>
+			<StickerList stickers={stickers}/>
 		</main>
 		<footer></footer>
 		<script></script>
