Organizing index+layout

--- a/client_astro/src/components/StickerCard.astro
+++ b/client_astro/src/components/StickerCard.astro
@@ -9,3 +9,4 @@ const { sticker, firstPhrase, categories } = Astro.props;
 <span class="categories">
     Categories: {categories || "None"}
 </span>
+{sticker.category}
