--- a/client_astro/src/pages/stickers/[slug].astro
+++ b/client_astro/src/pages/stickers/[slug].astro
@@ -1,23 +1,28 @@
 ---
 import fetchApi from "../../lib/strapi";
+import PrevNext from "../../components/PrevNext.astro";
 
 export async function getStaticPaths() {
     const stickers = await fetchApi({
         endpoint: "stickers",
         wrappedByKey: "data",
+        query: { populate: ["categories"] },
     });
 
-    const paths = stickers.map((sticker) => ({
+    const paths = stickers.map((sticker, i) => ({
         params: { slug: sticker.slug },
         props: {
             sticker,
+            prev: i > 0 ? stickers[i - 1] : null,
+            next: i < stickers.length - 1 ? stickers[i + 1] : null,
         },
     }));
 
     return paths;
 }
 
-const { sticker } = Astro.props;
+const { sticker, prev, next } = Astro.props;
 ---
 
 <h2>{sticker.name}</h2>
+<PrevNext prev={prev} next={next} path="stickers" />
