--- a/client_astro/src/components/Header.astro
+++ b/client_astro/src/components/Header.astro
@@ -1,3 +1,10 @@
 <header>
 	<h1><a href="/">Once upon a sticker</a></h1>
+	<nav>
+		<ul>
+			<li><a href="/stickers">Stickers</a></li>
+			<li><a href="/artists">Artists</a></li>
+			<li><a href="/categories">Categories</a></li>
+		</ul>
+	</nav>
 </header>
