--- a/client_astro/src/pages/index.astro
+++ b/client_astro/src/pages/index.astro
@@ -5,6 +5,8 @@ import { Image, Picture } from "astro:assets";
 import fetchApi from "../lib/strapi.js";
 import StickerList from "../components/StickerList.astro";
 import Filter from "../components/Filter.astro";
+import CategoryList from "../components/CategoryList.astro";
+import ArtistList from "../components/CategoryList.astro";
 
 const stickers = await fetchApi({
     endpoint: "stickers",
@@ -16,9 +18,16 @@ const categories = await fetchApi({
     endpoint: "categories",
     wrappedByKey: "data",
 });
+
+const artists = await fetchApi({
+    endpoint: "artists",
+    wrappedByKey: "data",
+});
 ---
 
 <BaseLayout>
     <Filter categories={categories} />
     <StickerList stickers={stickers} showCategory={false} />
+    <CategoryList categories={categories} />
+    <!-- <ArtistList artists={artists} /> -->
 </BaseLayout>
