--- a/client_astro/src/pages/stickers/[slug].astro
+++ b/client_astro/src/pages/stickers/[slug].astro
@@ -1,6 +1,7 @@
 ---
 import fetchApi from "../../lib/strapi";
 import PrevNext from "../../components/PrevNext.astro";
+import Header from "../../components/Header.astro";
 
 export async function getStaticPaths() {
     const stickers = await fetchApi({
@@ -24,5 +25,6 @@ export async function getStaticPaths() {
 const { sticker, prev, next } = Astro.props;
 ---
 
+<Header />
 <h2>{sticker.name}</h2>
 <PrevNext prev={prev} next={next} path="stickers" />
