Everything in main page

--- a/client_astro/src/pages/index.astro
+++ b/client_astro/src/pages/index.astro
@@ -6,7 +6,7 @@ import fetchApi from "../lib/strapi.js";
 import StickerList from "../components/StickerList.astro";
 import Filter from "../components/Filter.astro";
 import CategoryList from "../components/CategoryList.astro";
-import ArtistList from "../components/CategoryList.astro";
+import ArtistList from "../components/ArtistList.astro";
 
 const stickers = await fetchApi({
     endpoint: "stickers",
@@ -29,5 +29,5 @@ const artists = await fetchApi({
     <Filter categories={categories} />
     <StickerList stickers={stickers} showCategory={false} />
     <CategoryList categories={categories} />
-    <!-- <ArtistList artists={artists} /> -->
+    <ArtistList artists={artists} />
 </BaseLayout>
