--- a/client_astro/src/pages/index.astro
+++ b/client_astro/src/pages/index.astro
@@ -28,6 +28,6 @@ const artists = await fetchApi({
 <BaseLayout>
     <Filter categories={categories} />
     <StickerList stickers={stickers} showCategory={false} />
-    <CategoryList categories={categories} />
+    <!-- <CategoryList categories={categories} /> -->
     <ArtistList artists={artists} />
 </BaseLayout>
