--- a/client_astro/src/components/Header.astro
+++ b/client_astro/src/components/Header.astro
@@ -1,7 +1,34 @@
+<style>
+	ul {
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+	}
+	/* h1 {
+		font-family: "Cinzel", serif;
+		font-style: normal;
+		font-size: 7rem;
+		background-color: rgb(218, 167, 59);
+		color: rgb(244, 227, 207);
+		padding: 2rem;
+		text-align: center;
+	} */
+
+	li {
+		background-color: rgb(244, 227, 207);
+		color: rgb(218, 167, 59);
+		padding: 3rem;
+		font-size: 2rem;
+		inline-size: 100%;
+		block-size: 100%;
+		border-inline: 0.1rem solid rgb(218, 167, 59);
+	}
+</style>
+
 <header>
-	<h1><a href="/">Once upon a sticker</a></h1>
+	<h1 class="hidden"><a href="/">Once upon a sticker</a></h1>
 	<nav>
 		<ul>
+			<li></li>
 			<li><a href="/stickers">Stickers</a></li>
 			<li><a href="/artists">Artists</a></li>
 			<li><a href="/categories">Categories</a></li>
