--- a/client_astro/src/components/Filter.astro
+++ b/client_astro/src/components/Filter.astro
@@ -10,8 +10,8 @@ const { categories } = Astro.props;
     }
 
     .background {
-        background-color: rgb(218, 167, 59);
-        color: rgb(244, 227, 207);
+        background-color: rgba(218, 168, 59, 0.342);
+        color: rgb(179, 130, 24);
     }
 
     li {
@@ -34,8 +34,8 @@ const { categories } = Astro.props;
     }
 
     ul > li:first-child {
-        color: rgb(218, 167, 59);
-        background-color: rgb(244, 227, 207);
+        background-color: rgba(170, 121, 15, 0.643);
+        color: rgb(244, 227, 207);
     }
 
     strong {
