--- a/client_astro/src/components/Header.astro
+++ b/client_astro/src/components/Header.astro
@@ -1,23 +1,20 @@
 <style>
 	ul {
 		display: grid;
-		grid-template-columns: repeat(4, 1fr);
-	}
-	/* h1 {
-		font-family: "Cinzel", serif;
-		font-style: normal;
-		font-size: 7rem;
-		background-color: rgb(218, 167, 59);
-		color: rgb(244, 227, 207);
-		padding: 2rem;
+		grid-template-columns: 1fr 8fr;
 		text-align: center;
-	} */
+		align-items: center;
+	}
+	.nav_grid {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+	}
 
-	li {
+	.nav_grid > li {
 		background-color: rgb(244, 227, 207);
 		color: rgb(218, 167, 59);
 		padding: 3rem;
-		font-size: 2rem;
+		font-size: 1rem;
 		inline-size: 100%;
 		block-size: 100%;
 		border-inline: 0.1rem solid rgb(218, 167, 59);
@@ -28,10 +25,35 @@
 	<h1 class="hidden"><a href="/">Once upon a sticker</a></h1>
 	<nav>
 		<ul>
-			<li></li>
-			<li><a href="/stickers">Stickers</a></li>
-			<li><a href="/artists">Artists</a></li>
-			<li><a href="/categories">Categories</a></li>
+			<li>
+				<svg
+					id="Layer_1"
+					data-name="Layer 1"
+					xmlns="http://www.w3.org/2000/svg"
+					viewBox="0 0 323.18 406.13"
+					width="50"
+					height="50"
+				>
+					<defs>
+						<style>
+							.cls-1 {
+								fill: #dca546;
+								stroke: #dca546;
+								stroke-miterlimit: 10;
+							}
+						</style>
+					</defs>
+					<path
+						class="cls-1"
+						d="M175.53.07c.5,10.74,2.68,84.36-55.77,138.73C71.45,183.76,13.85,185.65.08,185.73c18.67,2.84,68.85,13.07,110.85,55.77,64.3,65.37,55.8,152.36,54.41,164.58,1.41-23.5,8.18-83.64,52.37-141.45,36.88-48.25,81.49-70.88,103.37-80.25-14.56-.97-60.27-5.88-98.61-42.16C164.16,87.05,174.36,8.1,175.53.07Z"
+					></path>
+				</svg>
+			</li>
+			<div class="nav_grid">
+				<li><a href="/stickers">Stickers</a></li>
+				<li><a href="/artists">Artists</a></li>
+				<li><a href="/categories">Categories</a></li>
+			</div>
 		</ul>
 	</nav>
 </header>
