--- a/client_astro/src/components/StickerList.astro
+++ b/client_astro/src/components/StickerList.astro
@@ -10,11 +10,13 @@ const { stickers, showCategory } = Astro.props;
         color: rgb(218, 167, 59);
         align-items: center;
         justify-items: center;
+        grid-template-rows: repeat(6, 1fr);
     }
 
     ul > li:nth-child(even) {
         background-color: rgb(218, 167, 59);
         color: rgb(244, 227, 207);
+        border: 0.1rem solid rgb(244, 227, 207);
     }
 
     li {
@@ -22,7 +24,28 @@ const { stickers, showCategory } = Astro.props;
         inline-size: 100%;
         block-size: 100%;
         padding: 2rem;
+        border: 0.1rem solid rgb(218, 167, 59);
     }
+
+    ul > li:first-child {
+        grid-column: 1;
+        grid-row: 1/3;
+    }
+ul > li:nth-child(13),
+    ul > li:nth-child(6) {
+        grid-column: 1/4;
+    }
+
+    ul > li:nth-child(9) {
+        grid-row: 4/6;
+        grid-column: 2/4;
+    }
+
+    ul > li:nth-child(14){
+        grid-row: 8/10;
+    }
+    
+
 </style>
 
 <ul>
@@ -31,10 +54,9 @@ const { stickers, showCategory } = Astro.props;
             const firstPhrase =
                 sticker.description[0]?.children[0]?.text.split(".")[0] + ".";
 
-            // Get the categories of the sticker
-            const categories = sticker.categories
-                ?.map((category) => category.slug)
-                .join(", ");
+            const categories = sticker.categories?.map((category) => 
+            category.slug)
+                .join(" ");
 
             return (
                 <li
