--- a/client_astro/src/pages/stickers/[slug].astro
+++ b/client_astro/src/pages/stickers/[slug].astro
@@ -1,7 +1,7 @@
 ---
 import fetchApi from "../../lib/strapi";
 import PrevNext from "../../components/PrevNext.astro";
-import Header from "../../components/Header.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
 
 export async function getStaticPaths() {
     const stickers = await fetchApi({
@@ -25,6 +25,24 @@ export async function getStaticPaths() {
 const { sticker, prev, next } = Astro.props;
 ---
 
-<Header />
-<h2>{sticker.name}</h2>
-<PrevNext prev={prev} next={next} path="stickers" />
+<style>
+    h2 {
+        font-size: 2rem;
+    }
+
+</style>
+
+<BaseLayout>
+    <h2>{sticker.name}</h2>
+    <p>
+        {
+            sticker.description
+                .map((paragraph) =>
+                    paragraph.children.map((child) => child.text).join(" "),
+                )
+                .join("")
+        }
+    </p>
+
+    <PrevNext prev={prev} next={next} path="stickers" />
+</BaseLayout>
