--- a/client_astro/src/components/PrevNext.astro
+++ b/client_astro/src/components/PrevNext.astro
@@ -3,10 +3,17 @@ const { prev, next, path } = Astro.props;
 ---
 
 <style>
-
   ul {
     display: flex;
     justify-content: space-between;
+  }
+
+  li {
+    margin: 2rem;
+    background-color: rgb(218, 167, 59);
+    padding: 1rem;
+    border-radius: 2rem;
+    color: rgb(244, 227, 207);
   }
 
   .right {
