--- a/client_astro/src/styles/global.css
+++ b/client_astro/src/styles/global.css
@@ -44,3 +44,13 @@ a {
 .hidden{
   display: none;
 }
+
+ .categories {
+   background-color: rgba(218, 168, 59, 0.475);
+   color: rgb(218, 153, 79);
+   font-size: 1.5rem;
+   width: fit-content;
+   padding: 1rem;
+   border-radius: 2rem;
+   margin-block-start: 2rem;
+ }
