--- a/client_astro/src/pages/stickers/[slug].astro
+++ b/client_astro/src/pages/stickers/[slug].astro
@@ -31,19 +31,13 @@ const { sticker, prev, next } = Astro.props;
         margin-block-end: 1rem;
     }
 
-    .sticker_container {
-        margin: 2rem;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-
     .categories {
         font-size: 1.5rem;
     }
 </style>
 
 <BaseLayout>
-    <div class="sticker_container">
+    <div class="container_detail">
         <div>
             <h2>{sticker.name}</h2>
             <p>
@@ -65,7 +59,7 @@ const { sticker, prev, next } = Astro.props;
                 }
             </p>
         </div>
-        <img>
+        <img />
     </div>
     <PrevNext prev={prev} next={next} path="stickers" />
 </BaseLayout>
