--- a/client_astro/src/styles/global.css
+++ b/client_astro/src/styles/global.css
@@ -54,3 +54,9 @@ a {
    border-radius: 2rem;
    margin-block-start: 2rem;
  }
+
+ .container_detail {
+  margin: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
