--- a/client_astro/src/pages/index.astro
+++ b/client_astro/src/pages/index.astro
@@ -11,7 +11,7 @@ import ArtistList from "../components/ArtistList.astro";
 const stickers = await fetchApi({
     endpoint: "stickers",
     wrappedByKey: "data",
-    query: { populate: ["categories"] },
+    query: { populate: ["categories", "image"] },
 });
 
 const categories = await fetchApi({
