--- a/client_astro/src/pages/artists.astro
+++ b/client_astro/src/pages/artists.astro
@@ -12,7 +12,7 @@ const categories = await fetchApi({
 const artists = await fetchApi({
     endpoint: "artists",
     wrappedByKey: "data",
-    query: { populate: ["categories", "stickers"] }
+    query: { populate: ["categories"] },
 });
 ---
 
