--- a/client_astro/src/pages/stickers.astro
+++ b/client_astro/src/pages/stickers.astro
@@ -9,17 +9,17 @@ import Filter from "../components/Filter.astro";
 const stickers = await fetchApi({
     endpoint: "stickers",
     wrappedByKey: "data",
-    query: { populate: ["categories"] },
+    query: { populate: ["categories", "image"] },
 });
 
 const categories = await fetchApi({
     endpoint: "categories",
     wrappedByKey: "data",
 });
-
 ---
 
 <BaseLayout>
     <Filter categories={categories} />
     <StickerList stickers={stickers} showCategory={false} />
+   
 </BaseLayout>
