Menu and filter

--- a/client_astro/src/components/Filter.astro
+++ b/client_astro/src/components/Filter.astro
@@ -5,7 +5,7 @@ const { categories } = Astro.props;
 <style>
     ul {
         display: grid;
-        grid-template-columns: repeat(8, 1fr);
+        grid-template-columns: repeat(auto-fit, minmax(5rem, 8.3rem));
         background-color: rgb(244, 227, 207);
     }
 
