--- a/client_astro/src/pages/artists/[slug].astro
+++ b/client_astro/src/pages/artists/[slug].astro
@@ -7,6 +7,7 @@ export async function getStaticPaths() {
     const artists = await fetchApi({
         endpoint: "artists",
         wrappedByKey: "data",
+        query: { populate: ["categories", "profile_photo"] },
     });
 
     const paths = artists.map((artist, i) => ({
